--- a/_variables.yml
+++ b/_variables.yml
@@ -37,8 +37,8 @@ ta:
   pronoun: "he/him"
   photo: "img/rasul-ibragimov.jpeg"
   audio: "rasul-ibragimov.mp3"
-  office-hours: "Tu TBD Th TBD and F TBD in person and online"
+  office-hours: "Tu 10:30 - 11:30 am Th 10:30 - 11:30 am and F 2:30 - 3:30 pm in person and online"
   office: "DBH 2013"
-  zoom: "TBD"
+  zoom: "https://uci.zoom.us/j/93989035260"
   
 
