--- a/_variables.yml
+++ b/_variables.yml
@@ -18,7 +18,9 @@ course:
   proposal: Nov 5th at 5:00 pm
   final-submission: Dec 10 at 7:30 am
   final-review: Dec 10 at 8:00 - 10:00 am		
-  
+  collab: at 3:30 - 5:30 pm on Fridays
+  collab-location: https://edstem.org/us/courses/87478/discussion/7059459
+
 instructor:
   name: "Dr. Mine Dogucu"
   email: "mdogucu@uci.edu"
